--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,23 @@
 <div class="home">
     <div class="homeBody">
-        <div>
+        <div class="zeroth">
             <h1>{{title}}</h1>
             <a class="homeUser" href="users/new">new user</a>
         </div>
-         <div class="first">1</div>
-        <div class="second">2</div>
-        <div class="third">3</div>
+        <div class="first">
+            
+        </div>
+        <div class="second">
+            <p>It's weird how the things that we once cherished could haunt us upon later review. A necklace an ex gave you.
+                A book that your late grandmother imparted to you. Or even a collection of VHS's that remind you of your
+                childhood. Sometimes holding onto these things ameliorate the end and sometimes, it just exasperates you.
+                Cartharsis is important. It's release. It's letting go. This app lets you tell the story of the things you're
+                hoarding, while also letting you healthily distance yourself from them. Don't hoard in your closet, document
+                it online. Who knows, maybe someone will relate to your story.</p>
+            </div>
+        <div class="third">
+           
+        </div>
     </div>
+</div>
 </div>
