--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,4 @@
 /* Layout Set Up: Fixed Header & Footer */
-
 html {
   display: flex;
   justify-content: center;
@@ -46,6 +45,7 @@ body {
 }
 h1 {
   margin: 0;
+  font-family: 'Fredericka the Great', cursive;
 }
 .fixed-footer{
   bottom: 0;
@@ -61,6 +61,7 @@ nav a, a{
 a > img {
   height: 50px;
   width: 50px;
+  border-radius: 0;
 }
 
 /* Home/Landing Page Main CSS */
@@ -87,21 +88,26 @@ a > img {
     align-items: center;
     background-attachment: fixed;
 } 
-
+.zeroth{
+  background: linear-gradient(to right, rgb(0, 204, 255) , rgb(0, 119, 255));
+}
 .first {
   background: url("https://images.unsplash.com/photo-1509343256512-d77a5cb3791b?auto=format&fit=crop&w=750&q=80");
   background-position: fixed;
 }
 
 .second { 
-  background-color: rgba(0, 0, 0, 0.938)
+  background: linear-gradient(to right, rgb(0, 204, 255) , rgb(0, 119, 255));
 }
 .third {
   background: url("https://images.unsplash.com/photo-1509343256512-d77a5cb3791b?auto=format&fit=crop&w=750&q=80");
   background-position: fixed;
 }
 .second > p {
-  color:white;
+  color:rgba(255, 255, 255, 0.11);
+}
+.second > p:hover{
+  color: white;
 }
 
 
