--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,6 +3,7 @@
 
 <head>
   <title>{{title}}</title>
+  <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Syncopate|The+Girl+Next+Door" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
