--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -1,23 +1,19 @@
-<div class="stepper">
-    <a href="/users">Home</a> / Profile
-</div>
-
 <div class="personPage">
     <div class="personHeader">
-        <h2>{{user.name}}'s page</h2>
-        <a href="/users">other users</a>
-        <a class="stores" href="/users/{{user._id}}/effects/new">new effect</a>
-        <a href="/users/{{user._id}}/effects">{{user.username}}'s effects</a>
-        <a class="connections" href="/users/{{user._id}}/effects/{{effect._id}}/connections">{{user.username}}'s connections</a>
-    </div>
-    <div class="connections">
-        {{#each effect.connections}}
-        <div class="gift">
-            <a href="/users/{{../userId}}/effects/{{../effect._id}}/connections/{{this._id}}">
-                {{this.title}}
-            </a>
+            <h2>{{user.name}}'s page</h2>
+            <a href="/users">other users</a>
+            <a class="stores" href="/users/{{user._id}}/effects/new">new effect</a>
+            <a href="/users/{{user._id}}/effects">{{user.username}}'s effects</a>
+            <a class="connections" href="/users/{{user._id}}/effects/{{effect._id}}/connections">{{user.username}}'s connections</a>
         </div>
-        {{/each}}
+    <div class="personBody">
+        <div class="personInfo">
+            <img src="{{user.img}}" alt="Picture of {{user.name}}">
+            <p>{{user.description}}</p>
+            <a class="delete" href="/users/{{user._id}}/delete">delete user</a>
+            <a class="update" href="/users/{{user._id}}/edit">edit user</a>
+            <a href="/users/{{user.id}}/effects">view effects</a>
+           
+        </div>
     </div>
-
 </div>
