--- a/views/connections/new.hbs
+++ b/views/connections/new.hbs
@@ -2,11 +2,11 @@
     <div class="newUserFormBody">
         <div class="newUser">
             <h2>create a new connection!</h2>
-            <img class="defaultImg" src="../../../../../images/default.gif" alt="Alternating colors">
+            <img class="defaultImg" src="https://i.imgur.com/EmkOkVP.gif" alt="Alternating colors">
         </div>
         <div class="form">
             <div class="userInfo">
-                <h2> enter new effect:</h2>
+                <h2> enter new connection:</h2>
             </div>
             <form action="/users/{{userId}}/effects/{{effect._id}}/connections" method="POST">
                 <div class="form-input">
