CSS fixed in header

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,8 +11,8 @@
   <div class="fixed-header">
     <h1>{{title}}</h1>
     <nav>
-      <a href="/users/new">new user</a>
-      <a href="/users">other users</a>
+      <a href="/users/new">new user |</a>
+      <a href="/users">all users |</a>
       <a href="/">home</a>
     </nav>
 
