--- a/views/connections/show.hbs
+++ b/views/connections/show.hbs
@@ -9,7 +9,7 @@
     </div>
     <div class="personBody">
         <div class="personInfo">
-        <img src="https://placehold.it/256/256" alt="placeholder">
+        <img class="sizeBig" src="https://placehold.it/256/256" alt="placeholder">
     </div>
     <div class="user-info">
         <p>Given to {{username}} by their {{connection.connection}}</p>
