--- a/views/effects/new.hbs
+++ b/views/effects/new.hbs
@@ -39,13 +39,12 @@
                     <input type="text" name="dontWant"/>
                 </div>
 
-                <div class="bottom-buttons">
-                    <input class="button primary" type="submit" value="create effect">
-                    <a href="/users/{{userId}}" class="button warning">cancel</a>
-
-                    <a href="/users/{{userId}}">go back</a>
-
+               <div class="bottom-buttons">
+                    <input class="button is-primary is-outlined" type="submit" value="create">
+                    <a href="/users/{{userId}}" class="button is-primary is-outlined" class="middle">cancel</a>
+                    <a href="/users" class="button is-primary is-outlined">home</a>
                 </div>
+                
             </form>
         </div>
     </div>
