--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -13,28 +13,22 @@
                     <label for="name">name:</label>
                     <input type="text" name="name" required/>
                 </div>
-
                 <div class="form-input">
                     <label for="username">username:</label>
                     <input type="text" name="username" required unique/>
                 </div>
-
                 <div class="form-input">
                     <label for="img">user image url:</label>
                     <input type="text" name="img" default/>
                 </div>
-
                 <div class="form-input">
                     <label for="description">bio:</label>
                     <input type="text" name="description" />
                 </div>
-
                 <div class="bottom-buttons">
-                    <input class="button primary" type="submit" value="create user">
-                    <a href="/users" class="button warning">cancel</a>
-
-                    <a href="/users">home</a>
-
+                    <input class="button is-primary is-outlined" type="submit" value="create">
+                    <a href="/users" class="button is-primary is-outlined" class="middle">cancel</a>
+                    <a href="/users" class="button is-primary is-outlined">home</a>
                 </div>
             </form>
         </div>
