--- a/views/effects/show.hbs
+++ b/views/effects/show.hbs
@@ -1,17 +1,17 @@
 <div class="personPage">
     <div class="personHeader">
         <h2>{{username}}'s effect</h2>
-        <a href="/users">other users</a>
-        <a class="effects" href="/users/{{userId}}/effects/new">new effect</a>
-        <a href="/users/{{userId}}/effects">{{username}}'s effects</a>
-        <a href="/users/{{userId}}/effects/{{effect._id}}/connections/new">new connection</a>
     </div>
     <div class="personBody">
         <div class="personInfo">
-            <img src="{{effect.img}}" alt="Picture of {{username}}">
+            <img class="sizeBig" src="{{effect.img}}" alt="Picture of {{username}}">
             <p>{{effect.description}}</p>
-            <a href="/users/{{userId}}/effects">back to effects</a>
-            <a href="/users/{{userId}}/effects/{{effect._id}}/delete">delete effect</a>
+            <div class="bottom-buttons">
+                <a class="button is-primary is-outlined" href="/users/{{userId}}/effects">back to effects</a>
+                 <a class="button is-primary is-outlined" href="/users/{{userId}}/effects/{{effect._id}}/connections/new">new connection</a>
+                 <a class="button is-primary is-outlined" href="/users/{{userId}}/effects/new">new effect</a>
+                <a class="button is-primary is-outlined" href="/users/{{userId}}/effects/{{effect._id}}/delete">delete effect</a>
+            </div>
         </div>
     </div>
 
