--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,26 +3,23 @@
 
 <head>
   <title>{{title}}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
   <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Syncopate|The+Girl+Next+Door" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
   <div class="fixed-header">
-    <h1>{{title}}</h1>
-    <nav>
-      <a href="/users/new">new user |</a>
-      <a href="/users">all users |</a>
-      <a href="/">home</a>
-    </nav>
-
+    <h2>{{title}}</h2>
   </div>
   {{{body}}}
   <div class="fixed-footer">
     <div class="image">
-      <a href="/"><img src="https://i.imgur.com/GQA8yka.png" alt="Icon"></a> 
-      <a href="/users"><img src="https://i.imgur.com/2vZ6US1.png" alt="Icon"></a> 
-      <a href="/users/new"><img src="https://i.imgur.com/ezDgCJw.png" alt="Icon"></a> 
+      <a href="/"><img class="size" src="https://i.imgur.com/B5lSqBm.png?1" alt="Icon"></a> 
+      <a href="/users"><img class="size" src="https://i.imgur.com/bgEh0IF.png?1" alt="users icon"></a> 
+      <a href="/users/new"><img class="size" src="https://i.imgur.com/ncUJdHD.png?1" alt="Icon"></a> 
     </div>
   </div>
 </body>
