Update grid gap

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -262,6 +262,10 @@ border-color: #00d1b2;
 color: #fff;
 }
 
+p {
+  margin: 20px 0;
+  color:#d15e00;
+}
 
 /* Images */
 
@@ -309,7 +313,7 @@ color: #fff;
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 40px;
+    grid-gap: 60px;
   }
 }
 
