--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -1,17 +1,16 @@
 <div class="personPage">
     <div class="personHeader">
         <h2>{{user.name}}'s page</h2>
-        <a class="stores" href="/users/{{user._id}}/effects/new">new effect |</a>
-        <a class="connections" href="/users/{{user._id}}/effects/{{effect._id}}/connections">{{user.username}}'s connections</a>
+        <a class="effectButton" class="stores" href="/users/{{user._id}}/effects/new">new effect</a>
     </div>
     <div class="personBody">
         <div class="personInfo">
             <img class="sizeBig" src="{{user.img}}" alt="Picture of {{user.name}}">
             <p>{{user.description}}</p>
             <div class="bottom-buttons">
-                <a class="button is-primary is-outlined" href="/users/{{user._id}}/delete">delete user</a>
-                <a class="button is-primary is-outlined" href="/users/{{user._id}}/edit">edit user</a>
-                <a class="button is-primary is-outlined" href="/users/{{user.id}}/effects">view effects</a>
+                <a class="effectButton" href="/users/{{user._id}}/delete">delete user</a>
+                <a class="effectButton" href="/users/{{user._id}}/edit">edit user</a>
+                <a class="effectButton" href="/users/{{user.id}}/effects">view effects</a>
             </div>
         </div>
     </div>
