Changed user edit buttons

--- a/views/users/edit.hbs
+++ b/views/users/edit.hbs
@@ -30,10 +30,10 @@
                 </div>
 
                 <div class="bottom-buttons">
-                    <input class="button primary" type="submit" value="update user">
-                    <a href="/users" class="button warning">cancel</a>
+                    <input class="button is-primary is-outlined"  type="submit" value="update">
+                    <a class="button is-primary is-outlined"  href="/users" class="button warning">cancel</a>
 
-                    <a href="/users">home</a>
+                    <a class="button is-primary is-outlined"  href="/users">home</a>
 
                 </div>
             </form>
