CSS buttons for new connection and edited effect show page

--- a/views/connections/new.hbs
+++ b/views/connections/new.hbs
@@ -22,8 +22,8 @@
                     <input type="text" name="over">
                 </div>
                 <div class="bottom-buttons">
-                    <input class="button primary" type="submit" value="create connection">
-                    <a href="/users/{{userId}}/effects/{{effect._id}}" class="button warning">cancel</a>
+                    <input "button is-primary is-outlined" type="submit" value="create connection">
+                    <a href="/users/{{userId}}/effects/{{effect._id}}" "button is-primary is-outlined">cancel</a>
                 </div>
             </form>
         </div>
