--- a/views/effects/show.hbs
+++ b/views/effects/show.hbs
@@ -19,7 +19,7 @@
         {{#each effect.connections}}
         <div class="connection">
             <a href="/users/{{../userId}}/effects/{{../effect._id}}/connections/{{this._id}}">
-                HEY
+                CONNECTION
             </a>
         </div>
         {{/each}}
