Fixed CSS bug on connection page and buttons

--- a/views/connections/new.hbs
+++ b/views/connections/new.hbs
@@ -22,8 +22,11 @@
                     <input type="text" name="over">
                 </div>
                 <div class="bottom-buttons">
-                    <input "button is-primary is-outlined" type="submit" value="create connection">
-                    <a href="/users/{{userId}}/effects/{{effect._id}}" "button is-primary is-outlined">cancel</a>
+                    <a href="/users" class="button is-primary is-outlined">home</a>
+                    <input class="button is-primary is-outlined" type="submit" value="create">
+                    <a href="/users/{{userId}}/effects/{{effect._id}}" class="button is-primary is-outlined">cancel</a>
                 </div>
             </form>
         </div>
+    </div>
+</div>
