--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
   <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Syncopate|The+Girl+Next+Door" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="icon" href="https://i.imgur.com/OogNo06b.jpg" type="image/x-icon"/>
 </head>
 
 <body>
