added go back for effects

--- a/views/effects/index.hbs
+++ b/views/effects/index.hbs
@@ -1,6 +1,7 @@
 <div class="usersIndex effectsIndex">
     <div>
         <div class="usersDisplay">
+             <a class="button is-primary is-outlined" href="/users/{{userId}}">go back</a>
             {{#each effects}}
             <div>
                 <div class="effectImg">
