--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,6 +2,7 @@
     <div class="homeBody">
         <div class="zeroth">
             <h1>{{title}}</h1>
+            <p>"One person's trash is another person's treasure."</p>
             <a class="homeUser" href="users/new">new user</a>
         </div>
         <div class="first">
