--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -112,7 +112,7 @@ nav a, a{
   font-family: 'Fredericka the Great', cursive;
 }
 .first {
-  background: url("https://images.unsplash.com/photo-1509343256512-d77a5cb3791b?auto=format&fit=crop&w=750&q=80");
+  background: url("https://images.unsplash.com/photo-1475563011407-6bf489b1c361?ixlib=rb-0.3.5&s=b6a521915bbb81ba8e32b94b9b5925d3&auto=format&fit=crop&w=750&q=80");
   background-position: fixed;
 }
 
@@ -136,7 +136,7 @@ nav a, a{
 .newUserPage {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
+  justify-content: center;
   align-items: center;
   width: 100vw;
   height: 150vh;
