--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,8 @@
     <div class="homeBody">
         <div class="zeroth">
             <h1>{{title}}</h1>
-            <p>"One person's trash is another person's treasure."</p>
+            <h2>[ef-ar-dot-end] </h2>
+            <p>Don't throw it away. Exchange your old gifts!</p>
             <a class="homeUser" href="users/new">new user</a>
         </div>
         <div class="first">
