--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,6 @@
 html {
   display: flex;
   justify-content: center;
-  height: 100%
 }
 body {
   height: 100%;
@@ -11,7 +10,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
 /* Error */
@@ -64,6 +62,10 @@ nav a, a{
 }
 .image {
   display: flex;
+  width: 200px;
+  margin-left: 5px;
+  margin-bottom: 10px;
+  justify-content: space-around;
 }
 
 /* Home/Landing Page Main CSS */
@@ -128,7 +130,9 @@ nav a, a{
   margin-left: 10px;
 }
 
-
+.zeroth > h2 {
+  color: white;
+}
 
 /* New User CSS */
 
@@ -336,9 +340,28 @@ p {
 .personPage {
   margin-top: 150px;
   margin-bottom: 150px;
-  height: 300vh;
+  /* height: 300vh; */
+  display: flex;
+  flex-direction: column;
+  /* align-items: center;  */
+  /* justify-content: space-around; */
 }
 
+.personHeader{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.bottom-buttons{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.effectButton{
+  width: 28%;
+  margin-top: 25px;
+  margin-bottom: 40px;
+}
 /* Some CSS responsiveness things that needed to be tended to */
 
 @media only screen and (max-width: 643px) {
