--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,12 +9,9 @@
             
         </div>
         <div class="second">
-            <p>It's weird how the things that we once cherished could haunt us upon later review. A necklace an ex gave you.
-                A book that your late grandmother imparted to you. Or even a collection of VHS's that remind you of your
-                childhood. Sometimes holding onto these things ameliorate the end and sometimes, it just exasperates you.
-                Cartharsis is important. It's release. It's letting go. This app lets you tell the story of the things you're
-                hoarding, while also letting you healthily distance yourself from them. Don't hoard in your closet, document
-                it online. Who knows, maybe someone will relate to your story.</p>
+            <p>Our Mission:</p>
+            <p>Fr!end encourages its users to healthfully part with material things. Instead of throwing out old memories, write about it carthartically and maybe even exchange your items with other people.</p>
+            <p>Post. Exchange. Let Go.</p>
             </div>
         <div class="third">
            
